--- a/community/src/main/resources/templates/editForm.html
+++ b/community/src/main/resources/templates/editForm.html
@@ -25,11 +25,9 @@
 
     <div class="my-3">
 
-    <textarea type="text" id="content" name="content" class="form-control" value="content" th:value="${board.content}">
-    </textarea>
+    <textarea type="text" id="content" name="content" class="form-control" value="content" th:value="${board.content}"></textarea>
     </div>
 
-    <hr class="my-4">
 
     <div class="row">
       <div class="col">
