--- a/community/src/main/resources/templates/boards.html
+++ b/community/src/main/resources/templates/boards.html
@@ -8,10 +8,10 @@
 <body>
 
 <div class="container" style="max-width: 600px">
-    <div class="py-5 text-center">
+    <di기v class="py-5 text-center">
         <h2>게시판 목록</h2>
-    </div>
-    <h4 class="mb-3" th:text="|닉네임: ${loginMember.nickname}|">로그인 사용자 이름</h4>
+    </di기v>
+    <h4 class="mb-3" th:text="|닉네임: ${loginMember?.nickname}|">로그인 사용자 이름</h4>
 
     <!--
         <div class="row">
@@ -71,7 +71,7 @@
             </tbody>
         </table>
     </div>
-    <form th:action="@{/logout}" method="post">
+    <form th:action="@{/boards/logout}" method="post">
         <button class="w-100 btn btn-dark btn-lg" type="submit">
             로그아웃
         </button>
