--- a/community/src/main/resources/templates/board.html
+++ b/community/src/main/resources/templates/board.html
@@ -27,9 +27,13 @@
 
   <div class="my-3">
 
-    <textarea type="text" id="content" name="content" class="form-control" value="내용" th:text="${board.content}" th:value="${board.content}" readonly>
+    <div class="h-75">
+      <div id="content" th:attr="content=${board.content}" contenteditable="false" role="textbox" aria-multiline="true" class="my-3" style="height: 300px; border: #1a1e21 3px";>
 
-    </textarea>
+
+
+      </div>
+    </div>
   </div>
   <div class="col">
     <ul class="list-group list-group-flush">
@@ -77,5 +81,11 @@
   </div>
 
 </div> <!-- /container -->
+<script>
+  // JavaScript를 사용하여 내용을 동적으로 설정
+  var contentDiv = document.getElementById('content');
+  var content = contentDiv.getAttribute('content');
+  contentDiv.innerText = content;
+</script>
 </body>
 </html>
