--- a/community/src/main/resources/templates/board.html
+++ b/community/src/main/resources/templates/board.html
@@ -35,6 +35,11 @@
       </div>
     </div>
   </div>
+  <div class="my-3 justify-content-center" style="display : flex; justify-content: center;align-items: center; margin: auto; ">
+    <button class="btn btn-primary" style="width: 100px; margin-right: 25px ">추천</button>
+    <p>1</p>
+  </div>
+
   <div class="col">
     <ul class="list-group list-group-flush">
 
