--- a/community/src/main/resources/templates/boards.html
+++ b/community/src/main/resources/templates/boards.html
@@ -57,15 +57,19 @@
             <tr>
                 <th>글 제목</th>
                 <th>글쓴이</th>
+                <th>추천수</th>
+                <th>조회수</th>
 
             </tr>
             </thead>
             <tbody>
             <tr th:each="board : ${boards}">
-                <td style="width: 80%">
+                <td style="width: 60%">
                     <a href="board.html" th:href="@{|/boards/${board.boardId}|}" th:text="${board.title}">글 제목</a>
                 </td>
-                <td th:text="${board.member.getNickname()}"></td>
+                <td th:text="${board.getBoardLike()}">작성자</td>
+                <td th:text="${board.getBoardViewCount()}">-1</td>
+                <td th:text="${board.member.getNickname()}">-1</td>
 
             </tr>
             </tbody>
